bug: searchbox dark mode styles

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -31,9 +31,17 @@
 }
 
 .h1 {
-    font-size: 32px;
+    font-size: 2rem;
 }
 
 .themeSwitcher {
     display: flex;
+    align-self: center;
+}
+
+@media (width > 700px) {
+    .header {
+        border-bottom-left-radius: 6.25rem;
+        height: 10rem;
+    }
 }
